// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a deleting status 1`] = `
<div
  className="center"
>
  <div
    className="color-icon-danger"
  >
    <ReactWrapperComponent
      shape="exclamation-triangle"
      size="md"
      solid={true}
    />
     Application Deleted
  </div>
</div>
`;

exports[`renders a failed status 1`] = `
<div
  className="center"
>
  <div
    className="color-icon-warning"
  >
    <ReactWrapperComponent
      shape="exclamation-triangle"
      size="md"
      solid={true}
    />
     Status: 
    Failed
  </div>
</div>
`;

exports[`renders a loading status 1`] = `
<div
  className="center"
>
  Loading Status...
  <LoadingWrapper
    medium={true}
  />
</div>
`;
